[GHO-76] fix soft footer texxt alignment

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
@@ -160,9 +160,17 @@
 
     @include desktop {
       max-width: 590px;
-      margin-left: 1rem;
-      text-align: left;
       font-size: .7em;
+
+      html[dir='ltr'] & {
+        margin-left: 1rem;
+        text-align: left;
+      }
+
+      html[dir='rtl'] & {
+        margin-right: 1rem;
+        text-align: right;
+      }
     }
   }
 
